[package]
name = "k1s0-auth"
version = "0.1.0"
edition = "2021"
description = "k1s0 framework authentication and authorization library"
license = "MIT"

[features]
default = []
full = ["axum-layer", "tonic-interceptor", "redis-cache", "postgres-policy"]
axum-layer = ["axum", "tower", "http", "http-body", "pin-project-lite", "futures"]
tonic-interceptor = ["tonic", "http"]
redis-cache = ["k1s0-cache/redis"]
postgres-policy = ["k1s0-db/postgres", "sqlx"]

[dependencies]
# JWT
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["sync", "time"] }
async-trait = "0.1"

# HTTP client for JWKS fetching
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"

# UUID for audit
uuid = { version = "1", features = ["v4", "serde"] }

# Axum middleware (optional)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
http = { version = "1.0", optional = true }
http-body = { version = "1.0", optional = true }
pin-project-lite = { version = "0.2", optional = true }
futures = { version = "0.3", optional = true }

# Tonic interceptor (optional)
tonic = { version = "0.12", optional = true }

# k1s0 cache integration (optional)
k1s0-cache = { path = "../k1s0-cache", optional = true }

# k1s0 db integration (optional)
k1s0-db = { path = "../k1s0-db", optional = true }

# SQLx for PostgreSQL policy repository (optional)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
