[package]
name = "k1s0-config"
version = "0.1.0"
edition = "2021"
description = "k1s0 framework - Configuration loader with secrets file support"
license = "MIT"
repository = "https://github.com/k1s0/k1s0"
keywords = ["config", "yaml", "secrets", "k1s0"]
categories = ["config"]

[features]
default = []
clap = ["dep:clap"]
db = ["tokio", "async-trait", "chrono"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["sync"], optional = true }
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
