[package]
name = "k1s0-domain-event"
version = "0.1.0"
edition = "2021"
description = "k1s0 framework - Domain event publishing, subscribing, and outbox pattern"
license = "MIT"
repository = "https://github.com/k1s0/k1s0"
keywords = ["domain-event", "event-bus", "outbox", "k1s0"]
categories = ["asynchronous"]

[features]
default = []
outbox = ["sqlx", "k1s0-db"]
full = ["outbox"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["time", "sync", "rt", "macros"] }

# Async trait
async-trait = "0.1"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"

# SQLx (optional, for outbox)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
], optional = true }

# k1s0-db (optional, for outbox)
k1s0-db = { path = "../k1s0-db", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
