[package]
name = "k1s0-error"
version = "0.1.0"
edition = "2021"
description = "k1s0 framework - Unified error representation with layer-specific responsibilities"
license = "MIT"
repository = "https://github.com/k1s0/k1s0"
keywords = ["error", "clean-architecture", "problem-details", "grpc", "k1s0"]
categories = ["rust-patterns"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
