[package]
name = "k1s0-grpc-server"
version = "0.1.0"
edition = "2021"
description = "k1s0 gRPC server common infrastructure"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Time
tokio = { version = "1.0", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
