[package]
name = "k1s0-observability"
version = "0.1.0"
edition = "2021"
description = "k1s0 framework - Observability (logging, tracing, metrics) with unified initialization"
license = "MIT"
repository = "https://github.com/k1s0/k1s0"
keywords = ["observability", "logging", "tracing", "metrics", "opentelemetry", "k1s0"]
categories = ["development-tools::debugging"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
